--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de porcentagem</title>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Único link para todos os ícones -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&text=calculate%20delete"
+    />
   </head>
   <body>
     <header>
-      <h1>Calculadora de porcengatem</h1>
+      <h1>Calculadora de porcentagem</h1>
     </header>
 
+    <nav class="navegacao">
+      <ul>
+        <li>
+          <a href link="paginas/porcentagem.html" destino=".calculos"
+            >Porcentagem</a
+          >
+        </li>
+        <li>
+          <a href link="paginas/proporcao.html" destino=".calculos"
+            >Proporção</a
+          >
+        </li>
+      </ul>
+    </nav>
+
     <main>
-      <nav>
-        <ul>
-          <li>
-            <a href link="paginas/porcentagem.html" destino=".calculos"
-              >Porcentagem</a
-            >
-          </li>
-          <li>
-            <a href link="paginas/proporcao.html" destino=".calculos"
-              >Proporção</a
-            >
-          </li>
-        </ul>
-      </nav>
       <div class="calculos"></div>
     </main>
 
