--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de porcentagem</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Único link para todos os ícones -->
+
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&text=calculate%20delete"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&text=calculate%20delete%20menu"
     />
   </head>
   <body>
     <header>
       <h1>Calculadora de porcentagem</h1>
     </header>
+    <button class="menu-button" id="menu-button">
+      <span class="material-symbols-outlined">menu</span>
+    </button>
 
-    <nav class="navegacao">
+    <nav id="navegacao" class="navegacao mostrar">
       <ul>
         <li>
-          <a href link="paginas/porcentagem.html" destino=".calculos"
+          <a
+            href
+            link="paginas/porcentagem.html"
+            destino=".calculos"
+            class="active"
             >Porcentagem</a
           >
         </li>
@@ -31,9 +38,7 @@
       </ul>
     </nav>
 
-    <main>
-      <div class="calculos"></div>
-    </main>
+    <main class="calculos"></main>
 
     <script src="script.js"></script>
   </body>
