--- a/paginas/proporcao.html
+++ b/paginas/proporcao.html
@@ -1,5 +1,9 @@
-<div id="calculadoraProporcao">
-  <div class="inputs">
+<div class="titulo">
+  <h2>PROPORÇÃO</h2>
+</div>
+<div class="colum">
+  <p>Exemplo: 300 equivalem a quantos por cento de 5.000R$?</p>
+  <div class="row">
     <div class="input">
       <label for="valorBase">O valor</label>
       <input type="number" id="valorBase" step="0.01" placeholder=" 0.00" />
@@ -10,17 +14,20 @@
       <input type="number" id="valorTotal" step="0.01" placeholder=" 0.00" />
     </div>
 
-    <div class="input action-group">
+    <div class="input">
       <label for="resultado">Resultado</label>
       <input type="text" id="resultado" placeholder=" 0.00" readonly />
-      <div class="buttons">
-        <button class="botaoLimpar" id="limparPorcentagem">
-          Limpar <span class="material-symbols-outlined"> delete </span>
-        </button>
-        <button class="botaoCalcular" id="calcularProporcao">
-          Calcular <span class="material-symbols-outlined"> calculate </span>
-        </button>
-      </div>
     </div>
   </div>
+  
+  <div class="buttons">
+    <button class="limpar" id="limparPorcentagem">
+      Limpar <span class="material-symbols-outlined"> delete </span>
+    </button>
+    <button class="calcular" id="calcularProporcao">
+      Calcular
+      <span class="material-symbols-outlined"> calculate </span>
+    </button>
+  </div>
+
 </div>
