--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <main class="calculos"></main>
 
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cleave.js@1/dist/cleave.min.js"></script>
+    <script type="module" src="js/script.js"></script>
   </body>
 </html>
