--- a/paginas/porcentagem.html
+++ b/paginas/porcentagem.html
@@ -6,21 +6,36 @@
   <div class="row">
     <div class="input">
       <label for="percentual">Quanto é</label>
-      <input type="number" id="percentual" step="0.01" placeholder=" 0.00" />
+      <class class="linha">
+        <h2>%</h2>
+        <input type="number" id="percentual" step="0.01" placeholder=" 0.00" />
+      </class>
     </div>
 
     <div class="input">
       <label for="valorBase">De (valor)</label>
-      <input type="number" id="valorBase" step="0.01" placeholder=" 0.00" />
+      <class class="linha">
+        <h2>$</h2>
+        <input
+          moeda
+          type="number"
+          id="valorBase"
+          step="0.01"
+          placeholder=" 0.00"
+        />
+      </class>
     </div>
 
     <div class="input">
       <label for="resultado">Resultado</label>
-      <input type="text" id="resultado" placeholder=" 0.00" readonly />
+      <div class="linha">
+        <h2>=</h2>
+        <input moeda type="text" id="resultado" placeholder=" 0.00" readonly />
+      </div>
     </div>
   </div>
   <div class="buttons">
-    <button class="limpar" id="limparPorcentagem">
+    <button id="limpar" class="limpar">
       Limpar <span class="material-symbols-outlined"> delete </span>
     </button>
     <button class="calcular" id="calcularPorcentagem">
