--- a/paginas/proporcao.html
+++ b/paginas/proporcao.html
@@ -6,22 +6,43 @@
   <div class="row">
     <div class="input">
       <label for="valorBase">O valor</label>
-      <input type="number" id="valorBase" step="0.01" placeholder=" 0.00" />
+      <class class="linha">
+        <h2>$</h2>
+        <input
+          moeda
+          type="number"
+          id="valorBase"
+          step="0.01"
+          placeholder=" 0.00"
+        />
+      </class>
     </div>
 
     <div class="input">
       <label for="valorTotal">É qual porcentagem de</label>
-      <input type="number" id="valorTotal" step="0.01" placeholder=" 0.00" />
+      <class class="linha">
+        <h2>%</h2>
+        <input
+          moeda
+          type="number"
+          id="valorTotal"
+          step="0.01"
+          placeholder=" 0.00"
+        />
+      </class>
     </div>
 
     <div class="input">
       <label for="resultado">Resultado</label>
-      <input type="text" id="resultado" placeholder=" 0.00" readonly />
+      <div class="linha">
+        <h2>=</h2>
+        <input type="text" id="resultado" placeholder=" 0.00" readonly />
+      </div>
     </div>
   </div>
-  
+
   <div class="buttons">
-    <button class="limpar" id="limparPorcentagem">
+    <button class="limpar" id="limpar">
       Limpar <span class="material-symbols-outlined"> delete </span>
     </button>
     <button class="calcular" id="calcularProporcao">
@@ -29,5 +50,4 @@
       <span class="material-symbols-outlined"> calculate </span>
     </button>
   </div>
-
 </div>
